<resources>
    <string name="app_name">Tabungan Aku</string>
    <string name="app_version">v1.0-beta</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="show_password">Show password</string>
    <string name="enter_pin">Enter your PIN</string>
    <string name="loading_label">Loading...</string>
    <string name="total_balance_label">Total Balance</string>
    <string name="withdraw_button_label">Withdraw</string>
    <string name="deposit_button_label">Deposit</string>
</resources>