<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:focusableInTouchMode="true"
    android:focusable="false"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:background="@color/tailwind_grey_100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="50dp"
        android:layout_gravity="center_vertical"
        android:focusableInTouchMode="true"
        android:focusable="false"
        android:clickable="true">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/app_logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tabungan "
                android:fontFamily="@font/signikabold"
                android:textSize="10pt"
                android:textColor="@color/tailwind_grey_600"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Aku"
                android:fontFamily="@font/signikabold"
                android:textSize="10pt"
                android:textColor="@color/tailwind_emerald_800"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_version"
            android:fontFamily="@font/ubuntusans"
            android:textColor="@color/tailwind_slate_400"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="@font/ubuntusans"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/username"
                android:id="@+id/input_username"
                android:inputType="text"
                android:layout_gravity="center_horizontal"
                android:autofillHints="username"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_text"
                android:fontFamily="@font/ubuntusans"
                android:textSize="7pt"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/ubuntusans"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password"
                android:id="@+id/input_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_text"
                android:fontFamily="@font/ubuntusans"
                android:textSize="7pt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
                <CheckBox
                    android:id="@+id/show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntusans"
                    android:textSize="7pt"
                    android:buttonTint="@color/tailwind_slate_800"
                    android:checked="true"
                    />
                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/sp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/show_password"
                    android:fontFamily="@font/ubuntusans"
                    android:textSize="7pt"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:width="150dp"
            style="@style/customButton"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntusans"
            android:letterSpacing="0.2"
            android:textStyle="bold"
            android:textSize="7pt"
            android:id="@+id/login_button"/>

    </LinearLayout>
</ScrollView>