<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="false"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:background="@color/tailwind_grey_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pp"
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fikri Miftah Akmaludin"
                    android:textColor="@color/tailwind_slate_800"
                    android:fontFamily="@font/ubuntusans"
                    android:textSize="8pt"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Anggota"
                    android:textColor="@color/tailwind_slate_600"
                    android:fontFamily="@font/ubuntusans"
                    android:textSize="6pt"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/rounded_card">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_balance_label"
                        android:textColor="@color/tailwind_slate_300"
                        android:fontFamily="@font/ubuntusans"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp 1.540.000"
                        android:textColor="@color/tailwind_slate_100"
                        android:fontFamily="@font/outfit_bold"
                        android:textSize="35sp"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:src="@drawable/money_mobile"
                    app:tint="@color/tailwind_grey_100"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            style="@style/customButton"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:tint="@color/white"
                android:src="@drawable/arrow_from_arc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/withdraw_button_label"
                android:textColor="@color/tailwind_slate_100"
                android:fontFamily="@font/ubuntusans"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:gravity="end|center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:padding="20dp"
            style="@style/customButton"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:tint="@color/white"
                android:src="@drawable/arrow_to_arc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/deposit_button_label"
                android:textColor="@color/tailwind_slate_100"
                android:fontFamily="@font/ubuntusans"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:gravity="end|center_vertical"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>